# Nextcloud_user_batch_add

./: .env.example  README.md  app.py  email_utils.py  nextcloud.py  pyproject.toml  requirements.txt
assets/: sample_users.csv
