[project]
name = "nextcloud-user-batch-add"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.14.0",
    "dash-ag-grid>=31.0.0",
    "dash-bootstrap-components>=1.5.0",
    "jupyter>=1.1.1",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
